@@ -16,6 +16,7 @@ add_subdirectory(payload-modification)
 add_subdirectory(payload-size-stats)
 add_subdirectory(plugin-event-stats)
 add_subdirectory(print-ip-on-publish)
+add_subdirectory(tick-interval)
 add_subdirectory(topic-modification)
 add_subdirectory(topic-jail)
 add_subdirectory(wildcard-temp)
