@@ -1,0 +1,15 @@
+R=../../..
+include ${R}/config.mk
+
+PLUGIN_NAME=mosquitto_tick_interval
+LOCAL_CFLAGS+=
+LOCAL_CPPFLAGS+=
+LOCAL_LDFLAGS+=
+LOCAL_LIBADD+=
+
+all : binary
+
+OBJS:=${PLUGIN_NAME}.o
+
+PLUGIN_NOINST:=1
+include ${R}/plugins/plugin.mk
