@@ -1,0 +1,7 @@
+listener 1883
+
+plugin ./mosquitto_tick_interval.so
+plugin_opt_interval 1
+
+plugin ./mosquitto_tick_interval.so
+plugin_opt_interval 4
