@@ -1,0 +1,3 @@
+#!/bin/sh
+
+valgrind --log-file=vglog ../../../src/mosquitto -c test.conf -v
